--- a/index.html
+++ b/index.html
@@ -5,54 +5,46 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 
-<script src="/lib/three.min.js"></script>
-<script src="/lib/ol.js"></script>
-<script src="/lib/jquery-1.11.2.min.js"></script>
+<script src="/js/lib/three.min.js"></script>
+<script src="/js/lib/ol.js"></script>
+<script src="/js/lib/jquery-1.11.2.min.js"></script>
+<script src="/js/lib/line-navigator.min.js"></script>
+<script src="/js/lib/file-navigator.min.js"></script>
 
-<script src="main.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/structures.js"></script>
 
 <script id="vertexShader" type="x-shader/x-vertex">
-	attribute vec2 lonLat1;
-	attribute vec2 lonLat2;
-	uniform float timeInterpolate;
+	attribute vec3 posTimeStart;
+	attribute vec3 posTimeEnd;
+	uniform float time;
 	uniform float scale;
-	uniform float flip;
 	
-	//varying float movement;
+	const vec2 zero = vec2(0.0, 0.0);
 	
 	void main() {
+		if(posTimeStart.xy == zero && posTimeEnd.xy == zero)
+			return;
+		
 		gl_PointSize = scale;
-		float z = 0.00;
-		/*if(lonLat1 - lonLat2 == vec2(0.0)){
-			movement = 0.0;
-			z -= 0.01;
-		}
-		else
-			movement = 1.0;*/
 		
-		vec2 mapStart, mapEnd;
-		if(flip == 1.0){
-			mapStart = lonLat1;
-			mapEnd = lonLat2;
-		} else {
-			mapStart = lonLat2;
-			mapEnd = lonLat1;
+		float timeDiff = posTimeEnd.z - posTimeStart.z;
+		if(timeDiff == 0.0){
+			gl_Position = projectionMatrix * modelViewMatrix * vec4(posTimeStart.x, posTimeStart.y, 0.0, 1.0);
 		}
-		vec3 mapPos = vec3(mix(mapStart.x, mapEnd.x, timeInterpolate), mix(mapStart.y, mapEnd.y, timeInterpolate), 0);
-		
-		vec3 positionNew = mapPos;
-		gl_Position = projectionMatrix * modelViewMatrix * vec4(positionNew, 1.0);
+		else{
+			float interpolate = (time - posTimeStart.z)/(timeDiff);
+			vec3 mapPos = vec3(mix(posTimeStart.x, posTimeEnd.x, interpolate), mix(posTimeStart.y, posTimeEnd.y, interpolate), 0);
+			gl_Position = projectionMatrix * modelViewMatrix * vec4(mapPos, 1.0);
+		}
 	}
 	
 </script>
 <script id="fragmentShader" type="x-shader/x-fragment">
 	uniform sampler2D texture;
-	//varying float movement;
 	
 	void main() {
-		vec4 color = vec4(0.8, 0.3, 0.0, 1.0);
-		/*if(movement == 0.0)
-			color.xyz = color.xyz/2.0;*/
+		vec4 color = vec4(0.9, 0.2, 0.0, 1.0);
 			
 		/*vec2 remap = (gl_PointCoord - 0.5) * 2.0;
 		float dist = pow(remap.x, 2.0) + pow(remap.y, 2.0);
