Remade buttons + other changes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 
 <script src="/js/lib/three.min.js"></script>
 <script src="/js/lib/ol.js"></script>
@@ -68,11 +68,10 @@
 	<div id="overlay" class="mainArea" ></div>
 	
 	<div id="buttons">
-		<button id="reset" onclick="reset()">Reset</button>
-		<button id="slower" onclick="slower()">Slower</button>
-		<button id="start" onclick="start()">Play</button>
-		<button id="stop" onclick="stop()">Stop</button>
-		<button id="faster" onclick="faster()">Faster</button>
+		<button id="reset" onclick="reset()">&#9632</button>
+		<button id="slower" onclick="slower()">&#9668&#9668</button>
+		<button id="startStop" onclick="startStop()">&#9658</button>
+		<button id="faster" onclick="faster()">&#9658&#9658</button>
 		<div id="speed">Playback speed: 1x</div>
 	</div>
 	
