--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
-<script src="/js/lib/three.min.js"></script>
-<script src="/js/lib/ol.js"></script>
-<script src="/js/lib/jquery-1.11.2.min.js"></script>
-<script src="/js/lib/line-navigator.min.js"></script>
-<script src="/js/lib/file-navigator.min.js"></script>
+<script src="js/lib/three.min.js"></script>
+<script src="js/lib/ol.js"></script>
+<script src="js/lib/jquery-1.11.2.min.js"></script>
+<script src="js/lib/line-navigator.min.js"></script>
+<script src="js/lib/file-navigator.min.js"></script>
 
-<script src="/js/main.js"></script>
-<script src="/js/structures.js"></script>
+<script src="js/main.js"></script>
+<script src="js/structures.js"></script>
 
 <script id="vertexShader" type="x-shader/x-vertex">
 	attribute vec3 posTimeStart;
@@ -80,7 +80,7 @@
 	</div>
 	
 	<div id="loading">
-		<img src="/images/ajax-loader.gif">
+		<img src="images/ajax-loader.gif">
 	</div>
 	
 </body>
