--- a/index.html
+++ b/index.html
@@ -13,39 +13,60 @@
 <script src="js/structures.js"></script>
 
 <script id="vertexShader" type="x-shader/x-vertex">
-	attribute vec3 posTimeStart;
-	attribute vec3 posTimeEnd;
+	precision highp float;
+	precision mediump int;
+	uniform mat4 modelViewMatrix;
+	uniform mat4 projectionMatrix;
+
+	attribute vec3 position;		//position-time: lon, lat, time
+	attribute vec3 positionNext;	//position-time: lon, lat, time
+	attribute float color;
 	uniform float time;
 	uniform float scale;
+	
+	varying vec3 unpackedColor;
 	
 	const vec2 zero = vec2(0.0, 0.0);
 	const vec4 outOfBounds = vec4(2.0, 0.0, 0.0, 1.0);
 	
+	vec3 unpackColor(float f) {
+		vec3 color;
+		color.b = floor(f / 256.0 / 256.0);
+		color.g = floor((f - color.b * 256.0 * 256.0) / 256.0);
+		color.r = floor(f - color.b * 256.0 * 256.0 - color.g * 256.0);
+		// now we have a vec3 with the 3 components in range [0..256]. Let's normalize it!
+		return color / 256.0;
+	}
+	
 	void main() {
-		if(time < posTimeStart.z || time > posTimeEnd.z || posTimeStart.xy == zero || posTimeEnd.xy == zero) {
+		if(time < position.z || time > positionNext.z || position.xy == zero || positionNext.xy == zero) {
 			gl_Position = outOfBounds;
 			return;
 		}
-		
+		unpackedColor = unpackColor(color);
 		gl_PointSize = scale;
 		
-		float timeDiff = posTimeEnd.z - posTimeStart.z;
+		float timeDiff = positionNext.z - position.z;
 		if(timeDiff == 0.0){
-			gl_Position = projectionMatrix * modelViewMatrix * vec4(posTimeStart.x, posTimeStart.y, 0.0, 1.0);
+			gl_Position = projectionMatrix * modelViewMatrix * vec4(position.x, position.y, 0.0, 1.0);
 		}
 		else{
-			float interpolate = (time - posTimeStart.z)/(timeDiff);
-			vec3 mapPos = vec3(mix(posTimeStart.x, posTimeEnd.x, interpolate), mix(posTimeStart.y, posTimeEnd.y, interpolate), 0);
+			float interpolate = (time - position.z)/(timeDiff);
+			vec3 mapPos = vec3(mix(position.x, positionNext.x, interpolate), mix(position.y, positionNext.y, interpolate), 0);
 			gl_Position = projectionMatrix * modelViewMatrix * vec4(mapPos, 1.0);
 		}
 	}
 	
 </script>
 <script id="fragmentShader" type="x-shader/x-fragment">
+	precision highp float;
+	precision mediump int;
+	
 	uniform sampler2D texture;
+	varying vec3 unpackedColor;
 	
 	void main() {
-		vec4 color = vec4(0.9, 0.2, 0.0, 1.0);
+		vec4 color = vec4(unpackedColor, 1.0);
 			
 		/*vec2 remap = (gl_PointCoord - 0.5) * 2.0;
 		float dist = pow(remap.x, 2.0) + pow(remap.y, 2.0);
@@ -62,7 +83,8 @@
 <body onload="init()">
 	
 	<div id="taskbar">
-		<input type="file" name="file" id="file">
+		<input id="add_data_hidden" type="file" name="file" id="file" multiple>
+		<div id="add_data_visible" type="file">Add data (can select multiple files at once)</div>
 	</div>
 
 	<div id="map" class="mainArea" ></div>
