--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
 	attribute vec3 position;		//position-time: lon, lat, time
 	attribute vec3 positionNext;	//position-time: lon, lat, time
 	attribute float color;
+	attribute float alpha;
+	attribute float size;
+	attribute float zValue;
+	
 	uniform float time;
 	uniform float scale;
+	uniform int mode;
 	
 	varying vec3 unpackedColor;
+	varying float alphaVar;
+	varying float modeVar;
 	
 	const vec2 zero = vec2(0.0, 0.0);
 	const vec4 outOfBounds = vec4(2.0, 0.0, 0.0, 1.0);
@@ -44,7 +51,16 @@
 			return;
 		}
 		unpackedColor = unpackColor(color);
-		gl_PointSize = scale;
+		alphaVar = alpha;
+		
+		if(mode == 0){
+			modeVar = 0.0;
+			gl_PointSize = (scale * 0.35) * size;
+		}
+		else {
+			modeVar = 1.0;
+			gl_PointSize = scale * size;
+		}
 		
 		float timeDiff = positionNext.z - position.z;
 		if(timeDiff == 0.0){
@@ -52,7 +68,7 @@
 		}
 		else{
 			float interpolate = (time - position.z)/(timeDiff);
-			vec3 mapPos = vec3(mix(position.x, positionNext.x, interpolate), mix(position.y, positionNext.y, interpolate), 0);
+			vec3 mapPos = vec3(mix(position.x, positionNext.x, interpolate), mix(position.y, positionNext.y, interpolate), zValue);
 			gl_Position = projectionMatrix * modelViewMatrix * vec4(mapPos, 1.0);
 		}
 	}
@@ -62,18 +78,21 @@
 	precision highp float;
 	precision mediump int;
 	
+	varying float alphaVar;
+	varying float modeVar;
+	
 	uniform sampler2D texture;
 	varying vec3 unpackedColor;
 	
 	void main() {
-		vec4 color = vec4(unpackedColor, 1.0);
-			
-		vec2 remap = (gl_PointCoord - 0.5) * 2.0;
-		float dist = pow(remap.x, 2.0) + pow(remap.y, 2.0);
-		if(dist < 1.0)
-			gl_FragColor = color;
-			
-		//gl_FragColor = color * texture2D( texture, gl_PointCoord );
+		if(modeVar == 0.0) {
+			vec2 remap = (gl_PointCoord - 0.5) * 2.0;
+			float dist = pow(remap.x, 2.0) + pow(remap.y, 2.0);
+			if(dist < 1.0)
+				gl_FragColor = vec4(unpackedColor, alphaVar);
+		}
+		else
+			gl_FragColor = vec4(0.9, 0.2, 0.0, alphaVar) * texture2D( texture, gl_PointCoord );
 	}
 	
 </script>
@@ -83,8 +102,9 @@
 <body onload="init()">
 	
 	<div id="taskbar">
-		<input id="add_data_hidden" type="file" name="file" id="file" multiple>
-		<div id="add_data_visible" type="file">Add data (can select multiple files at once)</div>
+		<input id="hidden_add_data" class="hidden_button" type="file" name="file" id="file" multiple>
+		<div id="visible_add_data" class="visible_button" type="file">Add data (can select multiple files at once)</div>
+		<div class="visible_button" onclick="toggleMode()">Toggle heatmap</div>
 	</div>
 
 	<div id="map" class="mainArea" ></div>
