--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body onload="init()">
 	
 	<div id="taskbar">
-		<input id="hidden_add_data" class="hidden_button" type="file" name="file" id="file">
-		<div id="visible_add_data" class="visible_button" type="file">Add data</div>
+		<input id="hidden_add_data" class="hidden_button" type="file" name="file" id="file" multiple>
+		<div id="visible_add_data" class="visible_button">Add data</div>
 		<div class="visible_button" onclick="toggleHeatMap()">Toggle heatmap</div>
 		<select id="map_provider" onchange="setMapProvider(this.value)">
 			<option value=0>Google Maps</option>
